# grill-simulator

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
assets/: catalog.toml  controls.toml
assets/levels/: backyard.level  backyard.toml  campsite.toml  rooftop.level  rooftop.toml
assets/models/: bench-basic.glb  burger-raw.glb  charcoal-grill-base.glb  charcoal-grill-lid.glb  chicken-cooked.glb  chicken-raw.glb  cooler-basic.glb  cooler.glb  crate.glb  firepit.glb  grill-basic.glb  grill.glb  lighter-fluid.glb  lighter.glb  log.glb  normaltest.glb  patty.glb  steak-cooked.glb  steak.glb  table.glb  tent.glb  tongs-metal.glb  tongs.glb  tray.glb  tree.glb
cmake/: AgilitySDK.cmake  Assets.cmake  DirectXTK12Audio.cmake  FastGltf.cmake  Flow.cmake  Fmod.cmake  Fonts.cmake  PhysX.cmake  Shaders.cmake
cmake/toolchains/: clang-cl-x64.cmake  msvc-x64.cmake
shaders/: bloom.hlsl  clouds.hlsl  common.hlsli  fluid.hlsl  fluid_blur.hlsl  fluid_composite.hlsl  grass.hlsl  lightshafts.hlsl  outline.hlsl  scene.hlsl  shadow.hlsl  sky.hlsl  text.hlsl  tonemap.hlsl  triangle.hlsl
src/: actions.cpp  actions.hpp  agility_exports.cpp  audio.cpp  audio.hpp  camera.cpp  camera.hpp  catalog.cpp  catalog.hpp  collision.cpp  collision.hpp  cook_information.cpp  cook_information.hpp  dx_common.hpp  environment.cpp  environment.hpp  flame.cpp  flame.hpp  flow_volume.cpp  flow_volume.hpp  fluid.cpp  fluid.hpp  font.cpp  font.hpp  furniture.cpp  furniture.hpp  grill.cpp  grill.hpp  heat_source.cpp  heat_source.hpp  ignitable_requirements.cpp  ignitable_requirements.hpp  image.cpp  image.hpp  input.cpp  input.hpp  level.cpp  level.hpp  main.cpp  menu.cpp  (+27 more)
tools/: decimate_models.py  gen_audio.py  gen_models.py  package.ps1  release.ps1
